[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/pause_scene.gd" type="Script" id=1]
[ext_resource path="res://fonts/Raleway-Regular-Legit.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Raleway-Regular.tres" type="DynamicFontData" id=3]


[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="pause scene" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="resume" type="Button" parent="."]
margin_left = 422.0
margin_top = 200.0
margin_right = 602.0
margin_bottom = 265.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="menu" type="Button" parent="."]
margin_left = 422.0
margin_top = 300.0
margin_right = 602.0
margin_bottom = 365.0
custom_fonts/font = ExtResource( 2 )
text = "Menu"

[node name="quit" type="Button" parent="."]
margin_left = 422.0
margin_top = 400.0
margin_right = 602.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
